# uptime-monitor

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  pyproject.toml
src/: api.rs  config.rs  dependencies.rs  main.rs  middlewares.rs  models.rs  monitor.rs
src/api/: mod.rs  models.rs  routes.rs
