[package]
name = "uptime-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
envconfig = "0.11.0"
mongodb = "3.1.0"
poem = "3.1.5"
poem-openapi = { version = "5.1.4", features = ["swagger-ui"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "registry", "env-filter", "local-time"] }
